--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^5.125.0",
     "zuplo": "^6"
   },
   "devDependencies": {
