--- a/docs/package.json
+++ b/docs/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mdx-js/react": "3.0.1",
     "react": "^19",
     "react-dom": "^19",
-    "@mdx-js/react": "3.0.1",
-    "zudoku": "^0.68"
+    "slugify": "^1.6.6",
+    "zudoku": "^0.69.3"
   },
   "devDependencies": {
     "@types/node": "^22",
