feat(api): update policies and add Clerk webhook handling for user lifecycle events

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^5.125.0",
+    "@clerk/backend": "^2",
     "zuplo": "^6"
   },
   "devDependencies": {
