--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^5.125.1",
     "@mdx-js/react": "3.0.1",
     "react": "^19",
     "react-dom": "^19",
